<resources>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="app_name">Calculator</string>
    <string name="history_title">History</string>
    <string name="calculator_screen_name">Calculator</string>
    <string name="settings_screen_name">Settings</string>

    <!--col1-->
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">x</string>
    <string name="remainder">%</string>
    <string name="div">/</string>
    <string name="del">del</string>

    <!--col2-->
    <string name="eq">=</string>
    <string name="three">3</string>
    <string name="six">6</string>
    <string name="nine">9</string>
    <string name="brackets">( | )</string>
    <string name="ans">prev ans</string>

    <!--col3-->
    <string name="zero">0</string>
    <string name="two">2</string>
    <string name="five">5</string>
    <string name="eight">8</string>
    <string name="exponent">^</string>
    <string name="log">log</string>

    <!--col4-->
    <string name="period">. | ( - )</string>
    <string name="one">1</string>
    <string name="four">4</string>
    <string name="seven">7</string>
    <string name="clearHistory">Clear History</string>
    <string name="clearExp">Clear</string>

</resources>
