<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackBlue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mystiko.mycalculator.CalcMainActivity">

    <!--outputs boxes-->
    <LinearLayout
        android:layout_width="20dp"
        android:layout_height="40dp"
        android:id="@+id/answerbox"
        android:layout_above="@+id/numpad"
        android:layout_toRightOf="@+id/history_container"
        android:background="@color/BackBlue">

        <!--expression output-->
        <TextView
            android:id="@+id/expression_output"
            style="@style/ExpressionOutput"/>

        <!--result output-->
        <TextView
            android:id="@+id/result_output"
            style="@style/ResultOutput"/>

    </LinearLayout>


    <!--history-->
    <LinearLayout
        android:id="@+id/history_container"
        style="@style/HistoryContainer"
        android:layout_toLeftOf="@+id/numpad"
        android:background="@color/BackBlue">

        <TextView
            style="@style/HistoryTitle"
            android:text="@string/history_title"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/history_col"
            style="@style/MainCalcHistory"
            android:scrollbars="vertical"
            android:layout_width="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/numpad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/history_container"
        android:layout_below="@+id/answerbox"
        android:layout_margin="0dp"
        android:padding="0dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn7"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperands"
                android:text="7"/>
            <Button
                android:id="@+id/btn8"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperands"
                android:text="8"
                />
            <Button
                android:id="@+id/btn9"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperands"
                android:text="9"
                />
            <Button
                android:id="@+id/btnDel"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcFunctions"
                android:text="@string/del"/>
            <Button
                android:id="@+id/btnClear"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcClear"
                android:text="@string/clearExp"
                />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn4"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperands"
                android:text="@string/four"/>

            <Button
                android:id="@+id/btn5"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperands"
                android:text="@string/five"
                />

            <Button
                android:id="@+id/btn6"
                style="@style/MainCalcOperands"
                android:layout_width="50dp"
                android:background="@color/white"
                android:text="@string/six"
                android:textColor="@color/Black" />



            <!--| + |-->
            <Button
                android:id="@+id/btnAdd"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperators"
                android:text="@string/add"/>
            <Button
                android:id="@+id/btnSub"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperators"
                android:text="@string/sub"/>


        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn1"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperands"
                android:onClick="btn1"
                android:text="@string/one"/>

            <Button
                android:id="@+id/btn2"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperands"
                android:text="@string/two"
                />



            <Button
                android:id="@+id/btn3"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperands"
                android:text="@string/three"
                />

            <Button
                android:id="@+id/btnMul"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperators"
                android:text="@string/mul"/>

            <!--| / |-->
            <Button
                android:id="@+id/btnDiv"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperators"
                android:text="@string/div"
                />

            <!--| x |-->

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnClearHistory"
                style="@style/MainCalcClear"
                android:background="@color/white"
                android:text="@string/clearHistory"
                android:textColor="@color/Black"
                android:textSize="11sp" />

            <Button
                android:id="@+id/btn0"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperands"
                android:text="@string/zero"
                />
            <!--| log |-->
            <Button
                android:id="@+id/btnLog"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperators"
                android:text="@string/log"
                />
            <Button
                android:id="@+id/btnRemainder"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperators"
                android:text="@string/remainder"/>
            <Button
                android:id="@+id/btnEq"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperators"
                android:text="@string/eq"
                />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnAns"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcFunctions"
                android:text="@string/ans"
                />
            <!--| . |-->
            <Button
                android:id="@+id/btnPeriod"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperands"
                android:text="@string/period"
                />
            <Button
                android:id="@+id/btnBrackets"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcFunctions"
                android:text="@string/brackets"/>
            <!--| ^ |-->
            <Button
                android:id="@+id/btnExponent"
                android:background="@color/white"
                android:textColor="@color/Black"
                style="@style/MainCalcOperators"
                android:text="@string/exponent"
                android:textSize="25sp"
                />

        </LinearLayout>

    </LinearLayout>






</RelativeLayout>
