<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:orientation="horizontal"
       >

        <Button
            android:id="@+id/btn7"
            style="@style/MainCalcOperands"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="7"
            android:textColor="@color/Black"
             />

        <Button
            android:id="@+id/btn8"
            style="@style/MainCalcOperands"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="8"
            android:textColor="@color/Black"
             />

        <Button
            android:id="@+id/btn9"
            style="@style/MainCalcOperands"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="9"
            android:textColor="@color/Black"
             />

        <Button
            android:id="@+id/btnDel"
            style="@style/MainCalcFunctions"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="xdel"
            android:textColor="@color/Black"
             />

        <Button
            android:id="@+id/btnClear"
            style="@style/MainCalcClear"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/clearExp"
            android:textColor="@color/Black"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn4"
            style="@style/MainCalcOperands"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/four"
            android:textColor="@color/Black"
            />

        <Button
            android:id="@+id/btn5"
            style="@style/MainCalcOperands"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/five"
            android:textColor="@color/Black"
           />

        <Button
            android:id="@+id/btn6"
            style="@style/MainCalcOperands"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/six"
            android:textColor="@color/Black"
            />


        <!--| + |-->
        <Button
            android:id="@+id/btnAdd"
            style="@style/MainCalcOperators"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/add"
            android:textColor="@color/Black"
           />

        <Button
            android:id="@+id/btnSub"
            style="@style/MainCalcOperators"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/sub"
            android:textColor="@color/Black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="49dp"
       >


        <Button
            android:id="@+id/btn1"
            style="@style/MainCalcOperands"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:onClick="btn1"
            android:text="@string/one"
            android:textColor="@color/Black"
             />

        <Button
            android:id="@+id/btn2"
            style="@style/MainCalcOperands"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/two"
            android:textColor="@color/Black"
             />


        <Button
            android:id="@+id/btn3"
            style="@style/MainCalcOperands"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/three"
            android:textColor="@color/Black"
            />

        <Button
            android:id="@+id/btnMul"
            style="@style/MainCalcOperators"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/mul"
            android:textColor="@color/Black"
           />

        <!--| / |-->
        <Button
            android:id="@+id/btnDiv"
            style="@style/MainCalcOperators"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/div"
            android:textColor="@color/Black"
            />

        <!--| x |-->

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       >


        <Button
            android:id="@+id/btnPeriod"
            style="@style/MainCalcOperands"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/period"
            android:textColor="@color/Black"
             />


        <Button
            android:id="@+id/btn0"
            style="@style/MainCalcOperands"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/zero"
            android:textColor="@color/Black"
           />
        <!--| log |-->
        <Button
            android:id="@+id/btnLog"
            style="@style/MainCalcOperators"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/log"
            android:textColor="@color/Black"
            />

        <Button
            android:id="@+id/btnRemainder"
            style="@style/MainCalcOperators"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/remainder"
            android:textColor="@color/Black"
           />

        <Button
            android:id="@+id/btnEq"
            style="@style/MainCalcOperators"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/eq"
            android:textColor="@color/Black"
           />


        <!--| . |-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >

        <Button
            android:id="@+id/btnAns"
            style="@style/MainCalcFunctions"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/ans"
            android:textColor="@color/Black"
            />

        <Button
            android:id="@+id/btnExponent"
            style="@style/MainCalcOperators"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/exponent"
            android:textColor="@color/Black"
            android:textSize="25sp"
           />

        <Button
            android:id="@+id/btnClearHistory"
            style="@style/MainCalcClear"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/clearHistory"
            android:textColor="@color/Black"
            android:textSize="11sp"
           />

        <Button
            android:id="@+id/btnBrackets"
            style="@style/MainCalcFunctions"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/brackets"
            android:textColor="@color/Black"
            />
        <!--| ^ |-->


    </LinearLayout>

</LinearLayout>